samples/_failures_safe/1761326581_d5e08f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d3307c5c.c: In function ‘main’:
./samples/SAFE/__tmp_d3307c5c.c:148:13: error: expected declaration or statement at end of input
  148 |             case PROCESS_NUMBER:
      |             ^~~~
./samples/SAFE/__tmp_d3307c5c.c:148:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d3307c5c.c:148:13: error: expected declaration or statement at end of input
